@@ -1,3 +1,6 @@
+13/07/2022 v.6.60 Neha
+	* [ZB-9323] Sum Amount Missing (Odoo-default)
+
 07/07/2022 v.6.59 Neha
 	* [ZB-5741] Probability and stage -->Feedbacks
 
